- Refactoring customer -> hero - Improving readme - New favicon

--- a/tour-of-heroes-md/src/app/shared/layout/layout.component.html
+++ b/tour-of-heroes-md/src/app/shared/layout/layout.component.html
@@ -83,13 +83,13 @@
           <p mat-line> Dashboard </p>
         </a>
 
-        <a [routerLink]="['/customers']"
+        <a [routerLink]="['/heroes']"
            mat-list-item
            routerLinkActive="active">
           <mat-icon mat-list-icon>
             business
           </mat-icon>
-          <p mat-line> Customers </p>
+          <p mat-line> Heroes </p>
         </a> <a [routerLink]="['/users']"
                 mat-list-item
                 routerLinkActive="active">
