--- a/tour-of-heroes-md/src/app/heroes/hero-list/hero-list.component.html
+++ b/tour-of-heroes-md/src/app/heroes/hero-list/hero-list.component.html
@@ -5,7 +5,7 @@
 
     <mat-card>
       <mat-card-content>
-        <h2>Customers</h2>
+        <h2>Heroes</h2>
 
         <table [dataSource]="dataSource"
                mat-table
